re-validate 10 feats